// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`keyrack sudo given: [case1] sudo credential set when: [t0] set --key SUDO_TOKEN --env sudo --vault os.direct --json then: stdout matches snapshot 1`] = `
{
  "createdAt": "__TIMESTAMP__",
  "env": "sudo",
  "exid": null,
  "maxDuration": null,
  "mech": "REPLICA",
  "org": "testorg",
  "slug": "testorg.sudo.SUDO_TOKEN",
  "updatedAt": "__TIMESTAMP__",
  "vault": "os.direct",
  "vaultRecipient": null,
}
`;

exports[`keyrack sudo given: [case1] sudo credential set when: [t1] set --key SUDO_TOKEN --env sudo (human readable) then: stdout matches snapshot 1`] = `
"
🔐 rhachet/keyrack set (org: testorg, env: sudo)
   └─ testorg.sudo.SUDO_TOKEN
      ├─ env: sudo
      ├─ org: testorg
      ├─ mech: REPLICA
      └─ vault: os.direct

   note: sudo credentials are stored in encrypted host manifest only.
         they will NOT appear in keyrack.yml.
done. key configured ✨

"
`;

exports[`keyrack sudo given: [case2] sudo unlock requires --key when: [t0] unlock --env sudo without --key then: stdout matches snapshot 1`] = `""`;

exports[`keyrack sudo given: [case3] org validation when: [t0] set --org invalid-org (not @this or @all) then: stdout matches snapshot 1`] = `""`;

exports[`keyrack sudo given: [case4] relock behavior when: [t0] relock (bare, no flags) then: stdout matches snapshot 1`] = `
"
🔒 rhachet/keyrack relock
   ├─ testorg.prep.AWS_PROFILE: pruned 🔒
   ├─ testorg.prep.SHARED_API_KEY: pruned 🔒
   ├─ testorg.prod.AWS_PROFILE: pruned 🔒
   └─ testorg.prod.SHARED_API_KEY: pruned 🔒
done. 4 keys pruned.

"
`;

exports[`keyrack sudo given: [case4] relock behavior when: [t1] relock --json then: stdout matches snapshot 1`] = `
{
  "relocked": [],
}
`;

exports[`keyrack sudo given: [case5] status output when: [t0] status when daemon not active then: stdout matches snapshot 1`] = `
"
🔐 rhachet/keyrack status
   ├─ owner: (default)
   ├─ recipients:
   │  └─ test-key (age)
   └─ daemon: active ✨
      └─ (no keys unlocked)

"
`;

exports[`keyrack sudo given: [case5] status output when: [t1] status --json then: stdout matches snapshot 1`] = `
{
  "keys": [],
  "owner": null,
  "recipients": [
    {
      "addedAt": "__TIMESTAMP__",
      "label": "test-key",
      "mech": "age",
      "pubkey": "age1qzd7j8sdwzn8a75lsxyw2sx7e7rn7g6w3a7x08m95pxan3c3u9fq7c6xuf",
    },
  ],
  "socketPath": "__SOCKET_PATH__",
}
`;

exports[`keyrack sudo given: [case6] list shows env and org fields when: [t0] keyrack list then: stdout matches snapshot 1`] = `
"
🔐 rhachet/keyrack list
   ├─ testorg.prod.SHARED_API_KEY
   │  ├─ env: prod
   │  ├─ org: testorg
   │  ├─ mech: REPLICA
   │  └─ vault: os.direct
   ├─ testorg.prep.SHARED_API_KEY
   │  ├─ env: prep
   │  ├─ org: testorg
   │  ├─ mech: REPLICA
   │  └─ vault: os.direct
   ├─ testorg.prod.AWS_PROFILE
   │  ├─ env: prod
   │  ├─ org: testorg
   │  ├─ mech: REPLICA
   │  └─ vault: os.direct
   ├─ testorg.prep.AWS_PROFILE
   │  ├─ env: prep
   │  ├─ org: testorg
   │  ├─ mech: REPLICA
   │  └─ vault: os.direct
   └─ testorg.sudo.SUDO_LIST_TEST
      ├─ env: sudo
      ├─ org: testorg
      ├─ mech: REPLICA
      └─ vault: os.direct
done. 5 keys configured.

"
`;

exports[`keyrack sudo given: [case6] list shows env and org fields when: [t1] keyrack list --json then: stdout matches snapshot 1`] = `
{
  "testorg.prep.AWS_PROFILE": {
    "createdAt": "__TIMESTAMP__",
    "env": "prep",
    "exid": null,
    "maxDuration": null,
    "mech": "REPLICA",
    "org": "testorg",
    "slug": "testorg.prep.AWS_PROFILE",
    "updatedAt": "__TIMESTAMP__",
    "vault": "os.direct",
    "vaultRecipient": null,
  },
  "testorg.prep.SHARED_API_KEY": {
    "createdAt": "__TIMESTAMP__",
    "env": "prep",
    "exid": null,
    "maxDuration": null,
    "mech": "REPLICA",
    "org": "testorg",
    "slug": "testorg.prep.SHARED_API_KEY",
    "updatedAt": "__TIMESTAMP__",
    "vault": "os.direct",
    "vaultRecipient": null,
  },
  "testorg.prod.AWS_PROFILE": {
    "createdAt": "__TIMESTAMP__",
    "env": "prod",
    "exid": null,
    "maxDuration": null,
    "mech": "REPLICA",
    "org": "testorg",
    "slug": "testorg.prod.AWS_PROFILE",
    "updatedAt": "__TIMESTAMP__",
    "vault": "os.direct",
    "vaultRecipient": null,
  },
  "testorg.prod.SHARED_API_KEY": {
    "createdAt": "__TIMESTAMP__",
    "env": "prod",
    "exid": null,
    "maxDuration": null,
    "mech": "REPLICA",
    "org": "testorg",
    "slug": "testorg.prod.SHARED_API_KEY",
    "updatedAt": "__TIMESTAMP__",
    "vault": "os.direct",
    "vaultRecipient": null,
  },
  "testorg.sudo.SUDO_LIST_TEST": {
    "createdAt": "__TIMESTAMP__",
    "env": "sudo",
    "exid": null,
    "maxDuration": null,
    "mech": "REPLICA",
    "org": "testorg",
    "slug": "testorg.sudo.SUDO_LIST_TEST",
    "updatedAt": "__TIMESTAMP__",
    "vault": "os.direct",
    "vaultRecipient": null,
  },
}
`;

exports[`keyrack sudo given: [case8] os.secure vault with vault-recipient when: [t0] set with --vault os.secure --vault-recipient then: stdout matches snapshot 1`] = `
{
  "createdAt": "__TIMESTAMP__",
  "env": "sudo",
  "exid": null,
  "maxDuration": null,
  "mech": "REPLICA",
  "org": "testorg",
  "slug": "testorg.sudo.SECURE_TOKEN",
  "updatedAt": "__TIMESTAMP__",
  "vault": "os.secure",
  "vaultRecipient": "age1qzd7j8sdwzn8a75lsxyw2sx7e7rn7g6w3a7x08m95pxan3c3u9fq7c6xuf",
}
`;

exports[`keyrack sudo given: [case9] unlock with --key for regular env when: [t0] unlock --env prod --key testorg.prod.AWS_PROFILE then: stdout matches snapshot 1`] = `
"
🔓 rhachet/keyrack unlock
   └─ testorg.prod.AWS_PROFILE
      ├─ env: prod
      ├─ org: testorg
      ├─ vault: os.direct
      └─ expires in: 540m
done. 1 keys unlocked.

"
`;
